
2005-12-05 Michal Čihař  <michal@cihar.com>
    * many files: Use same script tag, use CDATA for scripts (RFE #995065).
    * export.php: Check for correct parameters.
    * import.php, lang/*, libraries/import/csv.php, libraries/import/ldi.php:
      Fix import of some CSV files (bug #1373731), provide better error
      messages.
    * lang/czech: Update.

2005-12-04 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/catalan update, thanks to Xavier Navarro (xavin).
    * server_privileges.php: do not use UNION DISTINCT, as it's not allowed
      before MySQL 4.0.17, and because "it does nothing" (cf manual)
      ### 2.7.0 released

2005-12-04 Michal Čihař  <michal@cihar.com>
    * pdf_schema.php: Bad copy and paste, here should be iso-8859-2 (thanks
      Marc!).
    * libraries/import/csv.php: Fix use of escaped chars (bug #1371249).
    * lang/czech: Update.

2005-12-03 Marc Delisle  <lem9@users.sourceforge.net>
    * export.php, libraries/config.default.php, libraries/export/pdf.php,
      libraries/display_export.php, lang/*.php: experimental PDF export

2005-12-02 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * libraries/header.inc.php: missing ; for html entity,
      thanks to Matt "Cyber Dog"
    * tbl_properties_structure.php: fixed bdo tag and id names
      thanks to Matt "Cyber Dog"
    * libraries/tbl_indexes.lib.php: fixed missing quote
      thanks to Matt "Cyber Dog"
    * libraries/tbl_indexes.lib.php, tbl_properties_structure.php,
      tbl_indexes.php: revised XHTML output
    * themes/original/css/theme_left|right_css.php: use $GLOBALS

2005-12-01 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * libraries/common.lib.php, Theme.class.php:
      missing '/' in img path (bug #1370437)
    * libraries/Config.class.php:
      no error for missing config file (bug #1370269)
    * libraries/session.inc.php: session cookie path (bug #1370294)
    * libraries/Theme_Manager.class.php: update theme list on wakeup
